fix more from ala homepage width on small screens

--- a/assets/css/600-below.css
+++ b/assets/css/600-below.css
@@ -239,8 +239,9 @@
 		overflow: auto;
 	}
 
-			#home-page .variable-column {
+	#home-page .variable-column {
 		width: auto;
+		max-width: 100%;
 	}
 
 	#home-page .fixed-column {
